--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1>Gabrielle Essence Eau De Parfum</h1>
           <p class="product-description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
           <p class="discounted-price">$149.99<span class="price">$169.99</span></p>
-          <button><img src="images/icon-cart.svg">Add to Cart</button>
+          <button><img src="images/icon-cart.svg" alt="cart-icon">Add to Cart</button>
         </div>
       </main>
     </div>
